--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "inazuma-tailwind",
   "version": "1.0.0",
   "main": "index.html",
+  "homepage": "https://Anlaye22.github.io/landing",
   "scripts": {
     "dev": "vite",
     "tw-install": "npm install -D tailwindcss",
     "tw-init": "npx tailwindcss init",
     "tw-build": "npx tailwindcss -i ./src/css/tailwind.css -o ./assets/css/main.css --watch",
-    "tw-minify": "npx tailwindcss -o ./assets/css/main.min.css --minify"
+    "tw-minify": "npx tailwindcss -o ./assets/css/main.min.css --minify",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ranyeh24/inazuma-tailwind.git"
+    "url": "git+https://github.com/Anlaye22/landing.git"
   },
   "keywords": [
     "company",
@@ -22,6 +26,7 @@
   "description": "Tailwind CSS Company Landing Page Template by Ranyeh.",
   "devDependencies": {
     "tailwindcss": "^3.4.10",
-    "vite": "^6.3.5"
+    "vite": "^6.3.4",
+    "gh-pages": "^6.1.1"
   }
 }
